# vc001

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.api  README.md  fetcher.py  main.py  pyproject.toml  requirements.txt  storage.py
.github/workflows/: test.yml
src/quote_fetcher/: __init__.py  api.py  fetcher.py  main.py  schemas.py
tests/: test_api.py  test_fetcher.py  test_main.py
