[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quote-fetcher"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["requests>=2.33"]

[project.scripts]
quote-fetcher = "quote_fetcher.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/quote_fetcher"]

[tool.pytest.ini_options]
pythonpath = ["src"]
